[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/egyptian_whomp.png" type="Texture" id=1]
[ext_resource path="res://Whomp.gd" type="Script" id=2]
[ext_resource path="res://Sprites/line.png" type="Texture" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -113, 0, 0, 0, 0, 0, 72 )
}

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 96 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Attacking",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 27, 42 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 26, 4.5 )

[sub_resource type="Animation" id=5]
resource_name = "Attack"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.97, 0.97, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PathFollow2D/KinematicBody2D/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Attacking", "default", "default" ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Shake"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PathFollow2D/KinematicBody2D/Area2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PathFollow2D/KinematicBody2D/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "default" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PathFollow2D/KinematicBody2D/Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Whomp" type="Path2D"]
curve = SubResource( 1 )
script = ExtResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2( 0, -113 )
rotation = 1.5708
rotate = false

[node name="KinematicBody2D" type="KinematicBody2D" parent="PathFollow2D"]
rotation = 4.71239

[node name="AnimatedSprite" type="AnimatedSprite" parent="PathFollow2D/KinematicBody2D"]
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/KinematicBody2D"]
position = Vector2( -1.6691e-07, -3 )
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="PathFollow2D/KinematicBody2D"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/KinematicBody2D/Area2D"]
position = Vector2( 1.49631e-06, 43.5 )
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -9.53674e-07, -112 )
scale = Vector2( 2.7, 4.6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BottomLine" type="Sprite" parent="."]
position = Vector2( 0, 114 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="PathFollow2D/KinematicBody2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
